<resources>
    <string name="app_name">HUSStudent</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="root">Root</string>
    <string name="not_network">Internet is not connected</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="note_pad">Note Pad</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_your_student_id_to_create_an_account_for_your_student">Enter your student ID to create an account for your student</string>
    <string name="gpa">GPA</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="change_profile">Change Profile</string>
    <string name="apply">Apply</string>
    <string name="day">Day</string>
    <string name="student">Student</string>
    <string name="treasurer">Treasurer</string>
    <string name="monitor">Monitor</string>
    <string name="collection">Collection</string>
    <string name="add_collection">Add Collection</string>
    <string name="add_pay">Add Pay</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
</resources>