<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:padding="10dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/collection"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_add_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/drawable_rectangle"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_baseline_add_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:gravity="start|center_vertical"
            android:padding="10dp"
            android:text="@string/add_collection"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_add_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/drawable_rectangle"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_baseline_add_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:gravity="start|center_vertical"
            android:padding="10dp"
            android:text="@string/add_pay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>